unpackaged/main/default/objects/n2de__Distributor_category_team_member__c/n2de__Distributor_category_team_member__c.object-meta.xml
<CustomObject>
    <description>Distributor filter team members</description>
    <label>Distributor category team member</label>
    <nameField>
        <label>Distributor category team members Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor category team members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>