unpackaged/main/default/objects/n2de__Distributor_category_team_member__c/fields/n2de__Distribution_team_member__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_team_member__c</fullName>
    <label>Distribution team member</label>
    <referenceTo>n2de__Team_member__c</referenceTo>
    <relationshipLabel>Distributor category team members</relationshipLabel>
    <relationshipName>Distributor_category_team_members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>