unpackaged/main/default/objects/n2de__Distributor_category_team_member__c/fields/n2de__Distributor__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distributor__c</fullName>
    <label>Distributor</label>
    <referenceTo>n2de__Distributor__c</referenceTo>
    <relationshipLabel>Distributor category team members</relationshipLabel>
    <relationshipName>Distributor_category_team_members</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>