unpackaged/main/default/objects/n2de__Distributor_category_team_member__c/fields/n2de__Username__c.field-meta.xml
<CustomField>
    <fullName>n2de__Username__c</fullName>
    <formula>n2de__Distribution_team_member__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Username</label>
    <type>Text</type>
</CustomField>